--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,16 @@ import(httr)
 import(jsonlite)
 import(lubridate)
 import(tibble)
+importFrom(dplyr,any_of)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(glue,glue)
+importFrom(purrr,map)
+importFrom(purrr,map_dfr)
+importFrom(readr,type_convert)
+importFrom(rlang,list2)
+importFrom(tidyr,unnest)
+importFrom(utils,browseURL)
