--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,16 +11,19 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     testthat,
-    dplyr,
-    tidyr,
     waldo,
-    swecris,
-    purrr
+    swecris
 Imports:
     httr,
     httr2,
+    dplyr,
+    tidyr,
+    purrr,
     jsonlite,
     lubridate,
-    tibble
+    tibble,
+    glue,
+    readr,
+    rlang
 Remotes:
     KTH-Library/swecris    
