--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,23 @@ import(httr)
 import(jsonlite)
 import(lubridate)
 import(tibble)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(glue,glue)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
+importFrom(purrr,transpose)
 importFrom(readr,type_convert)
 importFrom(rlang,list2)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
 importFrom(utils,browseURL)
