add tests and crawl function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(purrr,transpose)
 importFrom(purrr,walk2)
 importFrom(readr,type_convert)
 importFrom(rlang,list2)
+importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
