add fcns to read and write gdp api lite resources

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(gdp_export_tables)
 export(gdp_harvest)
 export(gdp_test)
 export(gdp_upload_files)
+export(read_gdp_lite)
+export(write_gdp_lite)
 import(DBI)
 import(duckdb)
 import(httr)
